src/rules/snapshots/pg_migration_lint__rules__pgm007__tests__gen_random_uuid_fires_warning.snap
---
source: src/rules/pgm007.rs
assertion_line: 244
expression: findings
---
- rule_id: PGM007
  severity: Minor
  message: "Column 'id' on 'tokens' uses volatile default 'gen_random_uuid()'. Unlike non-volatile defaults, this forces a full table rewrite under an ACCESS EXCLUSIVE lock — every existing row must be physically updated with a computed value. For large tables, this causes extended downtime. Consider adding the column without a default, then backfilling with batched UPDATEs."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
